--- a/vidicaweb/Dockerfile
+++ b/vidicaweb/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:16.15.1 as build
-WORKDIR /vidicaWeb
+WORKDIR /vidicaweb
 
 COPY package*.json ./
 RUN npm install
@@ -8,4 +8,4 @@ COPY . ./
 RUN npm run build
 FROM nginx:1.19
 COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /vidicaWeb/build /usr/share/nginx/html
+COPY --from=build /vidicaweb/build /usr/share/nginx/html
